examples/tests/semantic/pass/var-string2.tig
let
	var a := "Hello"
in
    function compareTwoStrings (b : string, c : string) : bool = 
        if b = c then true else false
end
