examples/tests/semantic/fail/elseTypeMismatch.tig
let 
    var taylor := "Taylor"
in 
    if taylor = "Taylor" then
        "Taylor"
    else
        1
end